# chebupelka-docker

./: .gitignore  Dockerfile  docker-compose.yml
chebupelka/: README.md  chebupelka  chebupelka.py  chebupelka2  chebupelka2.py  mcp_settings.json  mcp_settings.json.bak  pyproject.toml  resume.odt  test-prompts.txt
chebupelka-node/: README.md  chebupelkanode  index.js  package-lock.json  package.json
chebupelka-php/: README.md  chebupelkaphp  cli.php  composer.json
chebupelka-php/src/: Agent.php  Config.php  Tools.php
data/users_crud/: README.md  alembic.ini  main.py  pyproject.toml  task.md  users.db  users_db_test.db
data/users_crud/alembic/: env.py
data/users_crud/alembic/versions/: 13143ddff9bd_create_users_table.py
data/users_crud/app/: config.py  database.py  main.py
data/users_crud/app/models/: __init__.py
data/users_crud/app/repositories/: user_repository.py
data/users_crud/app/routers/: user_router.py
data/users_crud/app/schemas/: user_schemas.py
data/users_crud/tests/: test_users.py
data/users_crud2/: README.md  alembic.ini  main.py  pyproject.toml  task.md  users_db.sqlite
data/users_crud2/alembic/: env.py
data/users_crud2/alembic/versions/: 03e9c96584c8_initial_create_users_table.py
data/users_crud2/app/: __init__.py  main.py
data/users_crud2/app/core/: config.py
data/users_crud2/app/db/: models.py
data/users_crud2/app/repositories/: user_repository.py
data/users_crud2/app/routers/: users.py
data/users_crud2/app/schemas/: user.py
data/users_crud2/app/services/: user_service.py
data/users_crud2/tests/: test_users.py
(+1 files in other folders)
